--- a/main.html
+++ b/main.html
@@ -240,7 +240,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <tr>
     <td>
       <li><a href="/index.html">Главная</a></li>
-      <li><a href="/news">Новости</a></li>
+      <li><a href="\news.html">Новости</a></li>
       <li><a href="/book.html">Красная книга</a></li>
       <li><a href="/veteran.html">Ветераны</a></li>
       <li><a href="/link.html">Ссылки</a></li>
